codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__prompt_edit_tests__prompt_edit_menu.snap
---
source: tui/src/app/tests/prompt_edit_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Edit previous prompt


› 1. Edit this conversation      Replace this prompt and discard everything after it.
  2. Edit in a new conversation  Keep the original conversation and continue on a new branch.

  enter select · esc back
