codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__prompt_edit_tests__prompt_edit_replacement_failure.snap
---
source: tui/src/app/tests/prompt_edit_tests.rs
expression: next_history_message(&mut events)
---
■ Failed to edit the selected prompt: the selected transcript prompt no longer matches the persisted thread
