codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__prompt_edit_tests__prompt_edit_replacement_notice.snap
---
source: tui/src/app/tests/prompt_edit_tests.rs
expression: "lines_to_single_string(&app.transcript_cells.last().expect(\"replacement notice\").display_lines(100),)"
---
• Conversation reverted to this point. File changes are unchanged.
